# myrpc

./: CMakeLists.txt  autobuild.sh  readme.md
example/: friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  a.out  friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  lockqueue.cc  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cc  readme.md  test.pb.cc  test.pb.h  test.proto
